fixed most bugs

--- a/admin/rocket-formsave.html
+++ b/admin/rocket-formsave.html
@@ -182,7 +182,7 @@
 							</div>
 						</div>
 						<div class="box-content">
-							<iframe frameborder="0" class="span12" scrolling="no"></iframe>
+							<iframe height="2072" frameborder="0" class="span12" scrolling="no"></iframe>
 						</div>
 					</div>
 				</div>
